css/style.css
/* ... */
.division-past .static-title span{
	top:-100%;
}
.division-future .static-title span{
	top: 100%;
}
.static-title-obscured{
	opacity: 0;
}
.static-title-obscured span{
	top: 100% !important;
}

.touch .static-title{
	position: absolute;

}


/* .col (extends div)*/
.col{
	position: absolute;
	width: 100%;
	height: 100%;
	z-index: 9;
	margin: 0 auto;
	background: rgba(240,240,240,0.8);
	line-height: 1.25em;
	padding:20px 0;
	font-family: "Fedra Sans Display 1 Thin Condensed";
	font-style: normal;
	font-weight: normal;
	font-stretch: normal;
}
.touch .col{
	height: 50%;
	padding: 0;
}
.figcaption-liner{
	position: absolute;
	bottom: 100px;
	width: 50%;
	margin: 0;
	right: 20px;
	padding: 0;
}
strong{
	font-style: normal;
	font-weight: normal;
	font-stretch: normal;
	color: #EF4136;
}
ul,
li{
	list-style: none;
	list-style-image: none;
	padding: 0;
	margin: 0;
	display: inline;
}
li{
	padding-right: 0.5em;
}
.feint{
	color:#999;
}
.feint li{
	display: block;
}
.big{
	font-size: 300%;
	line-height: 1em;
	display: block;
	margin-bottom: 0.05em;
}
/* .horizontal-carousel (extends figure) */

.horizontal-carousel{
	position: relative;
	z-index: 1;
	height: 90%;
	width: 100%;
}
.touch .horizontal-carousel{
	margin-top: 50%;
	height: 50%;
	position: absolute;
}
.touch .division-empty .horizontal-carousel{
	margin-top: 0;
	height: 100%;
}
.no-touch .horizontal-carousel{
	position: fixed;
	top:100%;
	-webkit-transition: all 1s ease-in-out;
	-moz-transition: all 1s ease-in-out;
	-o-transition: all 1s ease-in-out;
	transition: all 1s ease-in-out;
}
.no-touch .division-past .horizontal-carousel{
	top:0%;
	margin-top: -100%;
}
.horizontal-carousel-controls{
	height: 80%;
	display: block;
}
.horizontal-carousel-slide,
.horizontal-carousel-slider{
	float: left;
}
.horizontal-carousel,
.horizontal-carousel-slider,
.horizontal-carousel-slide{
	height: 100%;
	display: block;
	-webkit-transform:translate3d(0,0,0) rotate(0) scale(1);
}

.horizontal-carousel-slider,
.horizontal-carousel-slide,
.carousel-tabs,
.carousel-tabs li,
.horizontal-carousel-controls,
.horizontal-carousel-control{
	list-style: none;
	list-style-type: none;
	padding: 0;
	margin: 0;
}
.horizontal-carousel-slide{
	-webkit-background-size: contain;
	-o-background-size: contain;
	-moz-background-size: contain;
	background-size: contain;
	background-position: center center;
	background-repeat: no-repeat;
}
.no-touch .carousel-tabs{
	opacity: 0;
}
.carousel-tabs,
.horizontal-carousel-controls{

	-webkit-transition: all 0.3s linear;
	-moz-transition: all 0.3s linear;
	-o-transition: all 0.3s linear;
	position: absolute;
	width: 100%;
}
.no-touch .waypoint-active .horizontal-carousel{
	top:0;
}
.no-touch .waypoint-active .horizontal-carousel,
.waypoint-active .carousel-tabs,
.waypoint-active  .horizontal-carousel-controls{
	opacity: 1;
}
.horizontal-carousel-control.disabled,
.touch .horizontal-carousel-controls{
	display: none;
}
.horizontal-carousel-control{
	position: absolute;
	top:50%;
	width: 32px;
	height: 64px;
}

.horizontal-carousel-controls-next{
	right: 50px;
	background-position: -96px 0 ;
}
.no-touch .horizontal-carousel-controls-next:hover{
	background-position: -128px 0;
}
.horizontal-carousel-controls-prev{
	left: 50px;
	background-position: -32px 0 ;
}
.no-touch .horizontal-carousel-controls-prev:hover{
	background-position: -64px 0 ;
}
.carousel-tabs{
	bottom: 10px;
	text-align: center;
	z-index: 99;
}
.carousel-tabs li{
	display: inline-block;
	width: 16px;
	height: 16px;
	margin: 0 2px;
	position: relative;
	-webkit-transition: all 0.3s linear;
	-moz-transition: all 0.3s linear;
	-o-transition: all 0.3s linear;	
}
.carousel-tabs li a{
	position: absolute;
	background-position: 0 0;
	width: 16px;
	height: 16px;
	background-color: transparent;
	background-image: url(../img/sprite.png);
	display: block; 
	text-indent: -999em; 
	overflow: hidden; 
	background-repeat: no-repeat; 
	text-align: left; 
	direction: ltr;
}
.carousel-tabs .current a{
	background-position: -16px 0;	
}
figure{
	width: 100%;
	height: 100%;
}
.horizontal-carousel-slide-caption{
	position: absolute;
	width: 100%;
	text-align: center;
	bottom: 40px;
	padding: 10px;
	background: #e2e2e2;
	
    -moz-border-radius: 3px; 
	-webkit-border-radius: 3px; 
	border-radius: 3px; 
	-moz-background-clip: padding; 
	-webkit-background-clip: padding-box; 
	background-clip: padding-box; 

}
/**
 * Non-semantic helper classes: please define your styles before this section.
 */

/* For image replacement */
.ir { display: block; text-indent: -999em; overflow: hidden; background-repeat: no-repeat; text-align: left; direction: ltr; }

/* Hide for both screenreaders and browsers:
   css-discuss.incutio.com/wiki/Screenreader_Visibility */
.hidden { display: none; visibility: hidden; }

/* Hide only visually, but have it available for screenreaders: by Jon Neal.
  www.webaim.org/techniques/css/invisiblecontent/  &  j.mp/visuallyhidden */
.visuallyhidden { border: 0; clip: rect(0 0 0 0); height: 1px; margin: -1px; overflow: hidden; padding: 0; position: absolute; width: 1px; }
/* Extends the .visuallyhidden class to allow the element to be focusable when navigated to via the keyboard: drupal.org/node/897638 */
.visuallyhidden.focusable:active,
.visuallyhidden.focusable:focus { clip: auto; height: auto; margin: 0; overflow: visible; position: static; width: auto; }

/* Hide visually and from screenreaders, but maintain layout */
.invisible { visibility: hidden; }

/* The Magnificent Clearfix: Updated to prevent margin-collapsing on child elements in most situations.
   nicolasgallagher.com/micro-clearfix-hack/ */
.clearfix:before, .clearfix:after { content: ""; display: table; }
.clearfix:after { clear: both; }
.clearfix { zoom: 1; }



/**
 * Media queries for responsive design.
 *
 * These follow after primary styles so they will successfully override.
 */



.touch #container-liner{
	height: 1000%;
}

.touch .head{
	position: absolute;
}
/* ... */

